{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 35,
  "lineage": "c0fa6094-7e61-7f86-2974-3a58f7292748",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:security-group/sg-02d33e344acd38337",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d33e344acd38337",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound HTTPS traffic from worker nodes to control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with control plane via HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "project-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "755285933386",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kubernetes": "cluster",
              "Name": "project-eks-cluster-sg",
              "Project": "project"
            },
            "tags_all": {
              "Kubernetes": "cluster",
              "Name": "project-eks-cluster-sg",
              "Project": "project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:security-group/sg-07d2c8721085e0572",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d2c8721085e0572",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow control plane to communicate with worker nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d33e344acd38337"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker node group communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "project-eks-worker-sg",
            "name_prefix": "",
            "owner_id": "755285933386",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kubernetes": "worker",
              "Name": "project-eks-worker-sg",
              "Project": "project"
            },
            "tags_all": {
              "Kubernetes": "worker",
              "Name": "project-eks-worker-sg",
              "Project": "project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:network-acl/acl-0ca88e3e3d33682d9",
            "default_network_acl_id": "acl-0ca88e3e3d33682d9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ca88e3e3d33682d9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "755285933386",
            "subnet_ids": [
              "subnet-047f7665153f6dbe3",
              "subnet-0ccedf1b1c68f78b4",
              "subnet-0fbb83b8f630933d8",
              "subnet-0fc11771f95d7ab04"
            ],
            "tags": {
              "Name": "project-vpc-default"
            },
            "tags_all": {
              "Name": "project-vpc-default"
            },
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:route-table/rtb-02a16c1f48bf52452",
            "default_route_table_id": "rtb-02a16c1f48bf52452",
            "id": "rtb-02a16c1f48bf52452",
            "owner_id": "755285933386",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-vpc-default"
            },
            "tags_all": {
              "Name": "project-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:security-group/sg-06430ce36f2394fd5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06430ce36f2394fd5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "755285933386",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-vpc-default"
            },
            "tags_all": {
              "Name": "project-vpc-default"
            },
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09345395bb78159f8",
            "arn": "arn:aws:ec2:us-east-1:755285933386:elastic-ip/eipalloc-09345395bb78159f8",
            "association_id": "eipassoc-036ca24f89222fc3c",
            "domain": "vpc",
            "id": "eipalloc-09345395bb78159f8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-063aa66798690c09f",
            "private_dns": "ip-10-0-1-165.ec2.internal",
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-3-94-27-201.compute-1.amazonaws.com",
            "public_ip": "3.94.27.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "project-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "project-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:internet-gateway/igw-048ed584ae7622f8c",
            "id": "igw-048ed584ae7622f8c",
            "owner_id": "755285933386",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            },
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09345395bb78159f8",
            "association_id": "eipassoc-036ca24f89222fc3c",
            "connectivity_type": "public",
            "id": "nat-0a22ee8eb021a6a3a",
            "network_interface_id": "eni-063aa66798690c09f",
            "private_ip": "10.0.1.165",
            "public_ip": "3.94.27.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-047f7665153f6dbe3",
            "tags": {
              "Name": "project-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "project-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06fedb89f5c7c0a591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a22ee8eb021a6a3a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fedb89f5c7c0a59",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048ed584ae7622f8c",
            "id": "r-rtb-01f24c799c2497f4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f24c799c2497f4a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:route-table/rtb-06fedb89f5c7c0a59",
            "id": "rtb-06fedb89f5c7c0a59",
            "owner_id": "755285933386",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a22ee8eb021a6a3a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-vpc-private"
            },
            "tags_all": {
              "Name": "project-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:route-table/rtb-01f24c799c2497f4a",
            "id": "rtb-01f24c799c2497f4a",
            "owner_id": "755285933386",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048ed584ae7622f8c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-vpc-public"
            },
            "tags_all": {
              "Name": "project-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0812ae4513ecb9276",
            "route_table_id": "rtb-06fedb89f5c7c0a59",
            "subnet_id": "subnet-0fbb83b8f630933d8"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0defec6bcbc63ff81",
            "route_table_id": "rtb-06fedb89f5c7c0a59",
            "subnet_id": "subnet-0fc11771f95d7ab04"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004d04fe2514b55b7",
            "route_table_id": "rtb-01f24c799c2497f4a",
            "subnet_id": "subnet-047f7665153f6dbe3"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df151a8c1450b32c",
            "route_table_id": "rtb-01f24c799c2497f4a",
            "subnet_id": "subnet-0ccedf1b1c68f78b4"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:subnet/subnet-0fbb83b8f630933d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb83b8f630933d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755285933386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-vpc-private-us-east-1a",
              "kubernetes.io/cluster/project": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "project-vpc-private-us-east-1a",
              "kubernetes.io/cluster/project": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:subnet/subnet-0fc11771f95d7ab04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc11771f95d7ab04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755285933386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-vpc-private-us-east-1b",
              "kubernetes.io/cluster/project": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "project-vpc-private-us-east-1b",
              "kubernetes.io/cluster/project": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:subnet/subnet-047f7665153f6dbe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047f7665153f6dbe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755285933386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-vpc-public-us-east-1a",
              "kubernetes.io/cluster/project": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "project-vpc-public-us-east-1a",
              "kubernetes.io/cluster/project": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:subnet/subnet-0ccedf1b1c68f78b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccedf1b1c68f78b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755285933386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-vpc-public-us-east-1b",
              "kubernetes.io/cluster/project": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "project-vpc-public-us-east-1b",
              "kubernetes.io/cluster/project": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f500087d04dee390"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755285933386:vpc/vpc-0f500087d04dee390",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca88e3e3d33682d9",
            "default_route_table_id": "rtb-02a16c1f48bf52452",
            "default_security_group_id": "sg-06430ce36f2394fd5",
            "dhcp_options_id": "dopt-18b4e662",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f500087d04dee390",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a16c1f48bf52452",
            "owner_id": "755285933386",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}